kompose-proxy/us_interface/us-interface-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-proxy.yml -o kompose-proxy/
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: us-interface
  name: us-interface
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: us-interface
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-proxy.yml -o kompose-proxy/
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: us-interface
    spec:
      containers:
        - image: csantosr/us_interface
          name: us-interface
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
