kompose-proxy/us_interface/interface-ingress-lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: interface-ingress-lb
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: us-interface
  ports:
    - port: 3000
      targetPort: 3000
